# mupen64plus-core

./: .gitattributes  .gitignore  .hgignore  .travis.yml  INSTALL  LICENSES  README  README.md  RELEASE  TODO  appveyor.yml  files_macos.c  freenode.txt  meson.build  meson_options.txt
.github/workflows/: build.yml  schedule.yml
cross/: mxe-i686-w64-mingw32-cross.txt  mxe-x86-64-w64-mingw32-cross.txt
data/: mupen64plus.cht  mupen64plus.conf  mupen64plus.desktop  mupen64plus.desktop.in  mupen64plus.ini  mupencheat.txt
data/icons/: LICENSES
doc/: Audio_1.2.h  Input_1.1.h  Rsp_1.1.h  module-api-versions.txt
doc/emuwiki-api-doc/: Mupen64Plus-Core-Parameters.mediawiki  Mupen64Plus-Plugin-Parameters.mediawiki  Mupen64Plus-v2.0-API-Versioning.mediawiki  Mupen64Plus-v2.0-Core-API-v1.0.mediawiki  Mupen64Plus-v2.0-Core-Config.mediawiki  Mupen64Plus-v2.0-Core-Front-End.mediawiki  Mupen64Plus-v2.0-Core-Video-Extension.mediawiki  Mupen64Plus-v2.0-Netplay-API.mediawiki  Mupen64Plus-v2.0-Plugin-API.mediawiki  Mupen64Plus-v2.0-headers.mediawiki  Mupen64Plus_Core_Parameters.txt  Mupen64Plus_Plugin_Parameters.txt  Mupen64Plus_v2.0_API_Versioning.txt  Mupen64Plus_v2.0_Core_API_v1.0.txt  Mupen64Plus_v2.0_Core_Config.txt  Mupen64Plus_v2.0_Core_Debugger.txt  Mupen64Plus_v2.0_Core_Front-End.txt  Mupen64Plus_v2.0_Core_Video_Extension.txt  Mupen64Plus_v2.0_Plugin_API.txt  Mupen64Plus_v2.0_headers.txt
projects/VisualStudio2013/: mupen64plus-core.vcxproj  mupen64plus-core.vcxproj.filters
projects/VisualStudio2015/: mupen64plus-core.vcxproj
projects/VisualStudio2017/: mupen64plus-core.vcxproj
projects/android/: Android.mk
projects/msvc/: mupen64plus-core.vcxproj  mupen64plus-core.vcxproj.filters
projects/msvc10/: mupen64plus-core.vcxproj  mupen64plus-core.vcxproj.filters
projects/msvc11/: mupen64plus-core.vcxproj
projects/msvc8/: mupen64plus-core.vcproj
projects/unix/: Makefile  configure  install.sh  pre.mk  release.mk  uninstall.sh
src/ai/: ai_controller.c  ai_controller.h
src/api/: api_export.ver  audio_backend.c  audio_backend.h  callbacks.c  callbacks.h  common.c  config.c  config.h  debugger.c  debugger.h  frontend.c  m64p_common.h  m64p_config.h  m64p_debugger.h  m64p_frontend.h  m64p_plugin.h  m64p_types.h  m64p_vidext.h  vidext.c  vidext.h  vidext_sdl2_compat.h
src/asm_defines/: asm_defines.c
src/backends/: audio_out_backend.c  audio_out_backend.h  clock_backend.c  clock_backend.h  clock_ctime_plus_delta.c  clock_ctime_plus_delta.h  controller_input_backend.c  controller_input_backend.h  dummy_video_backend.c  dummy_video_backend.h  file_storage.c  file_storage.h  opencv_video_backend.cpp  opencv_video_backend.h  rumble_backend.c  rumble_backend.h  sdl3_video_capture.c  storage_backend.c  storage_backend.h
src/debugger/: breakpoints.c  breakpoints.h  dbg_breakpoints.c  dbg_breakpoints.h  dbg_debugger.c  dbg_debugger.h  dbg_decoder.c  dbg_decoder.h  dbg_decoder_local.h  dbg_memory.c  dbg_memory.h  dbg_opprintf.c  dbg_opprintf.h  dbg_types.h  debugger.c  debugger.h  decoder.c  decoder.h  memory.c  memory.h  opprintf.c  opprintf.h  types.h
src/device/: device.c  device.h
src/dummy_audio/: Makefile  audio.c
src/dummy_input/: Makefile  input.c  input.h  makewin32.bat
src/dummy_video/: Graphics_1.3.h  Makefile  video.cpp  video.h
src/lang/: english.lng
src/main/: adler32.c  api_callbacks.c  api_callbacks.h  api_common.c  api_config.c  api_config.h  api_debugger.c  api_frontend.c  api_vidext.c  asm_defines.c  cheat.c  cheat.h  config.c  config.h  device.c  device.h  eep_file.c  eep_file.h  eventloop.c  eventloop.h  file_storage.c  file_storage.h  fla_file.c  fla_file.h  gui.h  ini_reader.c  lirc.c  list.h  main.c  main.h  mpk_file.c  mpk_file.h  netplay.c  netplay.h  plugin.c  plugin.h  profile.c  profile.h  reset.c  rom.c  (+22 more)
src/memory/: dma.c  dma.h  flashram.c  flashram.h  memory.c  memory.h  pif.c  pif.h  pif2.h  tlb.c  tlb.h
src/opengl/: OGLFT.cpp  screenshot.cpp  screenshot.h
src/osal/: dynamiclib_unix.c  dynamiclib_win32.c  files.h  files_macos.c  files_unix.c  files_win32.c  preproc.h  strings.h
src/osd/: OGLFT.cpp  OGLFT.h  osd.c  osd.cpp  osd.h  screenshot.c  screenshot.cpp  screenshot.h
src/pi/: cart_rom.c  cart_rom.h  flashram.c  flashram.h  pi_controller.c  pi_controller.h  sram.c  sram.h
src/plugin/: Audio_1.1.h  audio_backend_compat.c  audio_backend_compat.h  dummy_audio.c  dummy_audio.h  dummy_input.c  dummy_input.h  dummy_rsp.c  dummy_rsp.h  dummy_video.c  dummy_video.h  emulate_game_controller_via_input_plugin.c  emulate_speaker_via_audio_plugin.c  get_time_using_time_plus_delta.c  get_time_using_time_plus_delta.h  input_plugin_compat.c  input_plugin_compat.h  plugin.c  plugin.h  rumble_via_input_plugin.c  rumble_via_input_plugin.h
src/r4300/: bc.c  cached_interp.c  cached_interp.h  compare_core.c  cop0.c  cop1.c  cop1_d.c  cop1_l.c  cop1_s.c  cop1_w.c  cp0.c  cp0.h  cp0_private.h  cp1.c  cp1.h  cp1_private.h  empty_dynarec.c  exception.c  exception.h  fpu.h  instr_counters.c  interpreter.def  interpreter_cop0.def  interpreter_cop1.def  interpreter_r4300.def  interpreter_regimm.def  interpreter_special.def  interpreter_tlb.def  interupt.c  interupt.h  macros.h  mi_controller.c  mi_controller.h  ops.h  profile.c  pure_interp.c  pure_interp.h  r4300.c  r4300.h  r4300_core.c  (+11 more)
src/rdp/: fb.c  fb.h  rdp_core.c  rdp_core.h
src/ri/: rdram.c  rdram.h  rdram_detection_hack.c  ri_controller.c  ri_controller.h
src/rsp/: rsp_core.c  rsp_core.h
src/si/: af_rtc.c  af_rtc.h  cic.c  eeprom.c  eeprom.h  game_controller.c  game_controller.h  (+8 more)
subprojects/: freetype2.wrap  libpng.wrap  sdl2.wrap  xxhash.wrap
subprojects/minizip/: meson.build
subprojects/oglft/: OGLFT.h  meson.build  meson_options.txt
tools/: build_bundle_bin.sh  build_bundle_src.sh  build_modules_src.sh  cheat_code_convert.py  gen_asm_defines.awk  gen_asm_script.cmd  gen_asm_script.sh  gen_sdl_key_converter.c  install_binary_bundle.sh  m64p_build.sh  m64p_get.sh  m64p_test.sh  m64p_update.sh  osx_build_bundle.sh  r4300prof.c  savestate_convert.c  uninstall_binary_bundle.sh
(+389 files in other folders)
